--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
         <!-- Main content section -->
         <div id="content">
             <!-- upgrade section -->
-            <div id="upgrade"></div>
+            <div id="upgrade">
+                <div id="button"></div>
+            </div>
+
+            <div id="albums">
+                <div class="row">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+
+                <div class="row">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+
+                <div class="row">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+            </div>
+            
         </div>
    </div>
 
