--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
    <div id="wrapper">
         <!-- Sidebar -->
-        <div id="sidebar"></div>
+        <div id="sidebar">
+            <div class="sidebox"></div>
+            <div class="sidebox"></div>
+            <div class="sidebox"></div>
+        </div>
 
         <!-- Main content section -->
         <div id="content">
@@ -48,7 +52,9 @@
 
    <!-- Bottom bar -->
    <div id="bottombar">
-
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
    </div>
 </body>
 </html>
