--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
         <div id="content">
             <!-- upgrade section -->
             <div id="upgrade">
-                <div id="button"></div>
+                <div id="button">
+                    <a href="#">
+                        <h5>EFFETTUA L'UPGRADE</h5>
+                    </a>
+                </div>
             </div>
 
             <div id="albums">
