Fixed Hover on Cards

--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
                         <a href="#">
                             <img class="album" src="img/stranger.jpeg" alt="stranger things">
 
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
+
                             <h5>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h5>
                             <h6>Kyle Dixon & Michael Stein</h6>
                         </a>
@@ -238,6 +240,8 @@
                     <div class="card">
                         <a href="#">
                             <img class="album" src="img/aquietplace.jpeg" alt="a quiet place">
+
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
 
                             <h5>A quiet place</h5>
                             <h6>Subtitle</h6>
@@ -248,6 +252,8 @@
                         <a href="#">
                             <img class="album" src="img/split.jpeg" alt="split">
 
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
+
                             <h5>Split</h5>
                             <h6>Subtitle</h6>
                         </a>
@@ -257,6 +263,8 @@
                         <a href="#">
                             <img class="album" src="img/cure.jpeg" alt="la cura dal benessere">
 
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
+
                             <h5>A cure for wellness</h5>
                             <h6>Subtitle</h6>
                         </a>
@@ -265,6 +273,8 @@
                     <div class="card">
                         <a href="#">
                             <img class="album" src="img/sinister.jpeg" alt="sinister">
+
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
 
                             <h5>Sinister</h5>
                             <h6>Subtitle</h6>
@@ -279,6 +289,8 @@
                         <a href="#">
                             <img class="album" src="img/radar.jpeg" alt="release radar">
 
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
+
                             <h5>Release Radar</h5>
                             
                         </a>
@@ -287,6 +299,8 @@
                     <div class="card">
                         <a href="#">
                             <img class="album" src="img/mixdaily.jpeg" alt="daily mix">
+
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
 
                             <h5>Daily Mix 1</h5>
                         </a>
@@ -300,6 +314,8 @@
                         <a href="#">
                             <img class="album" src="img/youg.jpeg" alt="lana del rey album">
 
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
+
                             <h5>Lana Del Rey</h5>
                         </a>
                     </div>
@@ -307,6 +323,8 @@
                     <div class="card">
                         <a href="#">
                             <img class="album" src="img/einaudi.jpeg" alt="ludovico einaudi">
+
+                            <i id="play" class=" fa-regular fa-circle-play"></i>
 
                             <h5>Ludovico Einaudi</h5>
                         </a>
